--- a/Diwali_Sales_Analysis.ipynb
+++ b/Diwali_Sales_Analysis.ipynb
@@ -1439,7 +1439,16 @@
    "source": [
     "*Married women age group 26-35 yrs from UP,  Maharastra and Karnataka working in IT, Healthcare and Aviation are more likely to buy products from Food, Clothing and Electronics category*"
    ]
+  },
+{
+   "cell_type": "markdown",
+   "id": "d7bfbc58",
+   "metadata": {},
+   "source": [
+    "Thank you!"
+   ]
   }
+ ],
  "metadata": {
   "kernelspec": {
    "display_name": "Python 3 (ipykernel)",
